--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
 			</div><!--#contacts-->
 				<div class="phone">
 						<h4>Телефон:</h4>
-						<p class="number"><span>+7 (926)</span> 652-36-66 </p>
+						<p class="number"><span>+7 (926)</span> 652-23-33  </p>
 						<p class="number">Мы находимся в Москве</p>
 				</div><!--#phone-->
 				<div id="entry">
@@ -166,8 +166,7 @@
 						</tr>
 					</table>
 				    <div class="phone-foot">		<h4>Телефоны:</h4>
-							<p class="number"><span>+7 (926)</span> 652-36-66 </p>
-							<p class="number"><span>+7 (926)</span> 635-56-66</p>
+							<p class="number"><span>+7 (926)</span> 652-23-33 </p>
 					</div><!--.phone-foot-->
 			  </div><!--.foot-->
 			  <div class="foot"><ul>
@@ -195,7 +194,7 @@
 	
 	var n = d.getElementsByTagName("script")[0],
 		s = d.createElement("script"),
-		f = function () { n.parentNode.insertBefore(s, n); };
+		f = function () { n.parentNode.insertBefore(/admin/s, n); };
 	s.type = "text/javascript";
 	s.async = true;
 	s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
