переделан слайдер на главной

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,43 +18,44 @@
 					{% endif %}
 					<h2>О компании</h2> 
 					{{ about|safe }}
-					   <figure><h5>Новые поступления</h5>
+					  <figure><h5>Добро пожаловать в онлайн магазин запчастей для автомобилей ВАЗ!</h5>
 							 <div class="d-carousel">
 								  <ul class="carousel">
 										<li><p class="box_img"><a href="#"><img src="/static/images/item-1.jpg" alt="" /></a></p>
-										    <span><a href="#">Амортизатор ВАЗ-2101-07</a></span>
+<!-- 										    <span><a href="#">Бампер ВАЗ 2110</a></span> -->
 										</li>
 										<li><p class="box_img"><a href="#"><img src="/static/images/item-2.jpg" alt="" /></a></p>
-										    <span><a href="#">Амортизатор ВАЗ-2101-07</a></span>
+<!-- 										    <span><a href="#">Крыло ВАЗ 2112</a></span> -->
 										</li>
 										<li><p class="box_img"><a href="#"><img src="/static/images/item-3.jpg" alt="" /></a></p>
-										    <span><a href="#">Амортизатор ВАЗ-2101-07</a></span>
+<!-- 										    <span><a href="#">Крашеный бампер ВАЗ 2114</a></span> -->
 										</li>
 										<li><p class="box_img"> <a href="#"><img src="/static/images/item-4.jpg" alt="" /></a></p>
-										    <span><a href="#">Амортизатор ВАЗ-2101-07</a></span>
+<!-- 										    <span><a href="#">Бампер в цвет ВАЗ 2101</a></span> -->
 										</li>
 										<li><p class="box_img"> <a href="#"><img src="/static/images/item-5.jpg" alt="" /></a></p>
-										    <span><a href="#">Амортизатор ВАЗ-2101-07</a></span>
+<!-- 										    <span><a href="#">Крашеное крыло ВАЗ 2105</a></span> -->
 										</li>
 										<li><p class="box_img"> <a href="#"><img src="/static/images/item-1.jpg" alt="" /></a></p>
-										    <span><a href="#">Амортизатор ВАЗ-2101-07</a></span>
+<!-- 										    <span><a href="#">Крыло в цвет ВАЗ 2112</a></span> -->
 										</li>
 										 <li><p class="box_img"> <a href="#"><img src="/static/images/item-2.jpg" alt="" /></a></p>
-										    <span><a href="#">Амортизатор ВАЗ-2101-07</a></span>
+<!-- 										    <span><a href="#">Крашеная дверь ВАЗ 2110</a></span> -->
 										</li>
 										<li><p class="box_img"> <a href="#"><img src="/static/images/item-3.jpg" alt="" /></a></p>
-										    <span><a href="#">Амортизатор ВАЗ-2101-07</a></span>
+<!-- 										    <span><a href="#">Дверь в цвет Лада Приора</a></span> -->
 										</li>
 										<li><p class="box_img"> <a href="#"><img src="/static/images/item-4.jpg" alt="" /></a></p>
-										    <span><a href="#">Амортизатор ВАЗ-2101-07</a></span>
+<!-- 										    <span><a href="#">Задний бампер Лада Калина</a></span> -->
 										</li>
 										<li><p class="box_img"> <a href="#"><img src="/static/images/item-5.jpg" alt="" /></a></p>
-										    <span><a href="#">Амортизатор ВАЗ-2101-07</a></span>
+<!-- 										    <span><a href="#">Передний бампер Нива</a></span> -->
 										</li>
 								  </ul>
-							</div><!--.d-carousel-->
+							</div>
 
 					  </figure>
+					  
 
 					  <article> <h2>Доставка и оплата</h2> <img src="/static/images/article-1.png">{{ delivery|safe }} </article>
 					   <article class="art-2"> <h2>Ассортимент</h2> <img src="/static/images/article-3.png"> {{ catalog|safe }} </article> 
