--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-        <h2>404</h2>
-        <p>Страница не найдена.</p>
+	<div id='wrapper'>
+		<h2>404</h2>
+		<p>Страница не найдена.</p>
+	</div>
 {% endblock %}
